[FIX] website: made scrollbar visible on right aligned scrollbar
In this fw-PR[1], we refactored the CSS to achieve consistency across
all browsers that cause the invisibility of the scrollbar in Chrome.

As per standard rule,

1. Scrollbar takes place between padding & border ( in the box model ).
So in Safari with the border solution, the scrollbar takes place at the
end while in chrome with the padding solution scrollbar takes place
before the navbar.
2. The scrollbar was visible in Safari & not in Chrome because safari
doesn'treserve the extra space for the scrollbar in DOM as Chrome.

Scrollbar was not actually hidden behind the menu but it was placed
outside the right-side window.( as per point 1).To handle that, this
commit revert the solution which has browser-specific CSS. Also,
introduced a missing scrollbar for navbar.

[1]: https://github.com/odoo/odoo/pull/107616

task-3366354

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1131,21 +1131,28 @@ header {
 } @else if o-website-value('header-template') == 'sidebar' {
     @include media-breakpoint-up(lg) {
         #wrapwrap {
-            // Two different website options might add padding:
-            // - The sidebar header template
-            // - The website layout template when different than 'full'
-            // We need to combine both using `calc`. The `border` solution does
-            // not work on Safari.
-            $padding-size: o-website-value('sidebar-width');
-            @if o-website-value('layout') != 'full' {
-                $padding-size: calc(#{$grid-gutter-width} * 2 + #{$padding-size});
-            }
+            // Hack: padding is also used by layout option (boxed, etc), need to
+            // combine both options/effects...
             @if $-hamburger-right {
-                padding-right: $padding-size;
+                border-right: o-website-value("sidebar-width") solid transparent;
             } @else {
-                padding-left: $padding-size;
+                border-left: o-website-value("sidebar-width") solid transparent;
             }
-
+            // ... but don't use it on Safari, it doesn't work, the menu is
+            // somehow broken and not visible.
+            &.o_safari_browser {
+                $padding-size: o-website-value("sidebar-width");
+                @if o-website-value("layout") != "full" {
+                    $padding-size: calc(#{$grid-gutter-width} * 2 + #{$padding-size});
+                }
+                @if $-hamburger-right {
+                    padding-right: $padding-size;
+                    border-right: none;
+                } @else {
+                    padding-left: $padding-size;
+                    border-left: none;
+                }
+            }
             > header {
                 @if $-hamburger-right {
                     @include o-position-absolute(0, 0, 0, auto);
@@ -1162,6 +1169,7 @@ header {
                     width: 100%;
                     align-items: start;
                     padding: $spacer;
+                    overflow: auto;
 
                     .navbar-brand {
                         max-width: 100%;
